Cart icon fixed on mobile

--- a/assets/base.css
+++ b/assets/base.css
@@ -2359,7 +2359,7 @@ input[type='checkbox'] {
 
 .header {
   display: grid;
-  grid-template-areas: 'left-icons heading icons';
+  grid-template-areas: 'icons heading left-icons';
   grid-template-columns: 1fr 2fr 1fr;
   align-items: center;
 }
